--- a/package.json
+++ b/package.json
@@ -2,28 +2,41 @@
   "name": "appgifs",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx,json}'",
-    "preview": "vite preview"
+    "lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx,json}' && eslint --fix 'tests/**/*.{js,jsx,ts,tsx,json}'",
+    "preview": "vite preview",
+    "test": "jest --watchAll",
+    "coverage": "jest --collectCoverage"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.14",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.11",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.4",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "babel-jest": "^29.6.4",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.6.4",
     "typescript": "5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "whatwg-fetch": "^3.6.18"
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   }
 }
